# travelops-swarm

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent_graph.py  deploy.sh  docker-compose.yml  nginx.conf  performance_monitor.py  pyproject.toml
.github/workflows/: ci.yml
customer_support_chat/app/: graph.py  main.py  main_api.py
customer_support_chat/app/core/: checkpoint.py  db.py  redis_controls.py  settings.py  state.py
customer_support_chat/app/services/: utils.py
customer_support_chat/app/services/assistants/: __init__.py  assistant_base.py  car_rental_assistant.py  excursion_assistant.py  flight_booking_assistant.py  hotel_booking_assistant.py  primary_assistant.py
customer_support_chat/app/services/mcp/: bootstrap.py  client.py  policy_server.py  registry.py  tool_loader.py
customer_support_chat/app/services/memory/: admin.py  experience_db.jsonl  experience_store.py  handoff.py  retriever.py  writer.py
customer_support_chat/app/services/reflection/: critic.py  pre_action.py  schemas.py  self_reflect.py
customer_support_chat/app/services/skills/: loader.py  registry.py  skill_store.py  skill_tool.py
customer_support_chat/app/services/tools/: __init__.py  cars.py  excursions.py  flights.py  hotels.py  lookup.py  memory_tools.py
customer_support_chat/app/services/vectordb/: vectordb.py
tests/: test_memory_mechanism.py
vectorizer/app/core/: settings.py
vectorizer/app/embeddings/: embedding_generator.py
vectorizer/app/vectordb/: chunkenizer.py  vectordb.py
(+6 files in other folders)
