[project]
name = "travelops-swarm"
version = "0.1.0"
description = "Multi-agent RAG travel support application"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "TravelOps Swarm Contributors" },
]
license = "MIT"
keywords = ["fastapi", "langgraph", "rag", "travel", "support", "redis", "qdrant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.19,<0.3.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "langchain-openai>=0.1.23,<0.2.0",
    "ipython>=8.27.0,<9.0.0",
    "duckduckgo-search>=6.2.12,<7.0.0",
    "langchain-community>=0.2.16,<0.3.0",
    "langchain-google-community>=1.0.8,<2.0.0",
    "qdrant-client[grpc]>=1.11.1,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "aiohttp>=3.10.5,<4.0.0",
    "tqdm>=4.66.5,<5.0.0",
    "more-itertools>=10.5.0,<11.0.0",
    "redis>=5.0.0,<6.0.0",
    "uvloop>=0.19.0,<0.20.0; sys_platform != 'win32'",
    "gunicorn>=21.2.0,<22.0.0",
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "langgraph-checkpoint-postgres>=1.0.0,<2.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
